# WAB

./: README.md  dockerfile  pyproject.toml
WAB-oAuth/: pyproject.toml
WAB-oAuth/src/: main.py
src/: main.py  schema.py
wab_4/: docker-compose.yml
wab_4/consumer/: pyproject.toml
wab_4/consumer/src/: main.py  my_mongo_db.py
wab_4/postgres/: init_review.sql
wab_4/producent/: pyproject.toml
wab_4/producent/src/: main.py  rabbitmq.py
wab_4/review/: pyproject.toml
wab_4/review/src/: crud.py  database.py  main.py  models.py  rabbitmq.py  schemas.py
