[project]
name = "WAB-hello-World"
version = "1.0.0"
description = "Simple hello world application"
authors = [
    {name = "Kleveta", email = "xkleveta@mendelu.cz"},
]
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn[standard]>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}



[tool.odm.scripts]
dev = "uvicorn main:app --reload"
test = "pytest"
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
]
