[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kleveta", email = "xkleveta@mendelu.cz"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0.post1",
    "authlib>=1.2.1",
    "httpx>=0.25.1",
    "itsdangerous>=2.1.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload"

