[project]
name = "Review"
version = "1.0.0"
description = "Service for coffee shop reviews"
authors = [
    {name = "Jan Kolomazník", email = "jan.kolomaznik@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.2",
    "pika>=1.3.2",
    "sqlalchemy>=2.0.22",
    "psycopg2>=2.9.9",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload"

